# vipsdisp

./: .codespellrc  .gitignore  CHANGELOG.md  LICENCE.txt  LICENSE  Makefile.am  Makefile.in  README.md  autogen.sh  bootstrap.sh  configure  configure.ac  conversion.c  conversion.h  conversionview.c  conversionview.h  disp.c  disp.gresources.xml  disp.h  displaybar.c  displaybar.h  gtkutil.c  gtkutil.h  imagedisplay.c  imagedisplay.h  imagepresent.c  imagepresent.h  imageview.c  imageview.h  imagewindow.c  imagewindow.h  infobar.c  infobar.h  io.github.jcupitt.vipsdisp.json  main.c  meson.build  meson_post_install.py  old_conversion.c  org.libvips.vipsdisp.appdata.xml  org.libvips.vipsdisp.desktop  (+24 more)
.github/workflows/: run_unit_tests.yml
bp/: Makefile.am  bloatpad  bloatpad-gresources.c
gtk/: conversionview-menu.ui  conversionview-popover.ui  conversionview.ui  displaybar.ui  imagepresent-popover.ui  imageview-popover.ui  imagewindow-menu.ui  imagewindow.ui  imagewindow.ui~  infobar.ui  menus.ui  tslider.ui
old/: compile_commands.json  configure.ac  conversion.c  conversionview.c  conversionview.h  disp.c  disp.gresources.xml  disp.h  gtkutil.c  imageview.c  infobar.c  tslider.c  tslider.h
old/gtk/: imageview-popover.ui  tslider.ui
patches/: cairo-1-fixes.patch  gdk-pixbuf-libjpeg-turbo.patch  glib-2-fixes.patch  ilmbase-2-fixes.patch  libgsf-1-fixes.patch  libheif-1-fixes.patch  libjpeg-turbo-compatibility.patch  librsvg-2-fixes.patch  openexr-2-fixes.patch  orc-0.4-fixes.patch  proxy-libintl-1-fixes.patch  transform.patch  zlib-name.patch
snap/: snapcraft.yaml
src/: angsty-saveoptions.c  animatedpane.c  animatedpane.h  animatedpane.old.c  diff  displaybar.c  displaybar.h  enumtypes.c.in  enumtypes.h.in  fuzzy.c  fuzzy.h  gtkutil.c  gtkutil.h  ientry.c  ientry.h  imagedisplay.c  imagedisplay.h  imageui.c  imageui.h  imagewindow.c  imagewindow.h  infobar.c  infobar.h  main.c  match.c  match.h  meson.build  metadata.c  metadata.h  metadatautil.c  metadatautil.h  properties.c  properties.h  propertiesutil.c  propertiesutil.h  saveoptions.c  saveoptions.h  tile.c  tile.h  tilecache.c  (+11 more)
src/gtk/: animatedpane.ui  displaybar.ui  ientry.ui  imagedisplay.css  imageui.ui  imagewindow.css  imagewindow.ui  infobar.ui  metadata.css  metadata.ui  properties.css  properties.ui  saveoptions.css  saveoptions.ui  tslider.ui  vipsdisp.gresources.xml  vipsdispmarshal.list
